Ready to tackle Terrm

--- a/ConvertAllTheThings.Core/ConvertAllTheThings.Core.csproj
+++ b/ConvertAllTheThings.Core/ConvertAllTheThings.Core.csproj
@@ -5,4 +5,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="DecimalMath.DecimalEx" Version="1.0.2" />
+  </ItemGroup>
+
 </Project>
