Replaced 'ConvertAllTheThings' text with 'Convertal'

--- a/Convertal.Defaults.Tests/Convertal.Defaults.Tests.csproj
+++ b/Convertal.Defaults.Tests/Convertal.Defaults.Tests.csproj
@@ -14,7 +14,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\ConvertAllTheThings.Defaults\ConvertAllTheThings.Defaults.csproj" />
+    <ProjectReference Include="..\Convertal.Defaults\Convertal.Defaults.csproj" />
   </ItemGroup>
 
 </Project>
