--- a/Convertal.Core.Tests/Convertal.Core.Tests.csproj
+++ b/Convertal.Core.Tests/Convertal.Core.Tests.csproj
@@ -23,7 +23,7 @@
 	</ItemGroup>
 
 	<ItemGroup>
-		<ProjectReference Include="..\ConvertAllTheThings.Core\ConvertAllTheThings.Core.csproj" />
+		<ProjectReference Include="..\Convertal.Core\Convertal.Core.csproj" />
 	</ItemGroup>
 
 </Project>
